[package]
name = "monolithium"
version = "1.0.0"
edition = "2024"

[lib]
name = "monolithium"
path = "monolithium/lib.rs"

[[bin]]
path = "monolithium/main.rs"
name = "monolithium"

[dependencies]
ahash         = "0.8.12"
indicatif     = {version="0.18.0", features=["rayon"]}
microbench    = "0.5.0"
png           = "0.17.16"
rayon         = "1.10.0"
smart-default = "0.7.1"

[features]
strict = []

[profile.dev]
strip = true

[profile.release]
codegen-units = 1
opt-level = 3
panic = "abort"
lto = "fat"
