[package]
name        = "monolithium"
version     = "1.0.0"
authors     = ["Tremeschin"]
description = "Finding the Largest Minecraft Infdev/Alpha Monoliths"
repository  = "https://github.com/Tremeschin/Monolithium"
readme      = "readme.md"
license     = "MIT"
edition     = "2024"

[lib]
name = "monolithium"
path = "monolithium/lib.rs"

[[bin]]
name = "monolithium"
path = "monolithium/main.rs"

[dependencies]
ahash         = "0.8.12"
clap          = {version="4.5.45", features=["derive"]}
indicatif     = {version="0.18.0", features=["rayon"]}
microbench    = "0.5.0"
png           = "0.17.16"
rand          = "0.9.2"
rayon         = "1.11.0"
smart-default = "0.7.1"

[features]
strict = []

[profile.dev]
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = 3
panic = "abort"
lto = "fat"
