[project.urls]
GitHub = "https://github.com/Tremeschin/Monolithium"

[project]
name        = "monolithium"
description = "Finding the Largest Minecraft Infdev/Alpha Monoliths"
authors     = [{name="Tremeschin"}]
version     = "1.1.0"
readme      = ".github/readme.md"
license     = "MIT"
requires-python = ">=3.10"
dependencies = [
    "meson~=1.9.0",
    "ninja~=1.13.0",
    "rustup~=1.28.2.1",
    "tomli~=2.2.1",
]
[project.optional-dependencies]
statistics = [
    "altair",
    "attrs",
    "numpy",
    "scipy",
    "vl-convert-python",
]
website = [
    "mkdocs-material~=9.6.20",
    "mkdocs~=1.6.1",
]
all = [
    "monolithium[statistics]",
    "monolithium[website]",
]

[dependency-groups]
dev = ["monolithium[all]"]

[project.scripts]
# Common
cudalith = "monolithium.__main__:_cudalith"
rustlith = "monolithium.__main__:_rustlith"
statlith = "monolithium.statistics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monolithium"]

