[project.urls]
GitHub = "https://github.com/Tremeschin/Monolithium"

[project]
name        = "monolithium"
description = "Finding the Largest Minecraft Alpha Monoliths"
authors     = [{name="Tremeschin"}]
version     = "1.3.0"
readme      = "readme.md"
license     = "MIT"
requires-python = ">=3.10"
dependencies = [
    "meson",
    "ninja",
    "rustbin",
]

[project.optional-dependencies]
statistics = [
    "altair",
    "attrs",
    "numpy",
    "scipy",
    "vl-convert-python",
]

[dependency-groups]
dev = ["monolithium[statistics]"]

[project.scripts]
cudalith = "monolithium.__main__:_cudalith"
rustlith = "monolithium.__main__:_rustlith"
statlith = "monolithium.statistics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monolithium"]

